// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCardText customize 1`] = `
<div>
  <h3
    class="card-text bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxCardText component 1`] = `
<div>
  <p
    class="card-text"
  >
    Test
  </p>
</div>
`;
